# calculator

./: .gitignore  Cargo.toml  README.md  dev.edfloreshz.Calculator.json  justfile
.github/workflows/: check.yml  flathub.yml
i18n/bg/: cosmic_ext_calculator.ftl
i18n/cs/: cosmic_ext_calculator.ftl
i18n/en/: cosmic_ext_calculator.ftl
i18n/es/: cosmic_ext_calculator.ftl
i18n/fr/: cosmic_ext_calculator.ftl
i18n/hu/: cosmic_ext_calculator.ftl
i18n/it/: cosmic_ext_calculator.ftl
i18n/nl/: cosmic_ext_calculator.ftl
i18n/pl/: cosmic_ext_calculator.ftl
i18n/pt-BR/: cosmic_ext_calculator.ftl
i18n/ro/: cosmic_ext_calculator.ftl
i18n/sv/: cosmic_ext_calculator.ftl
i18n/uk/: cosmic_ext_calculator.ftl
res/: app.desktop  com.example.CosmicAppTemplate.desktop  dev.edfloreshz.Calculator.metainfo.xml  metainfo.xml
src/: app.rs  calculation.rs  config.rs  error.rs  launcher.rs  main.rs  operator.rs  settings.rs
src/app/: calculation.rs  config.rs  operations.rs  operator.rs  settings.rs
src/core/: icons.rs  key_binds.rs  localization.rs  mod.rs
