[package]
name = "cosmic-ext-calculator"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.3.0"
regex = "1.11.2"
rust-embed = "8.3.0"
serde = { version = "1.0.208", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "about"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.tokio]
version = "1.47.1"
features = ["fs", "io-std", "io-util", "macros", "process", "rt"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
