[package]
name = "cosmic-ext-calculator"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.3.0"
rust-embed = "8.3.0"
semver = "1.0.27"
serde = { version = "1.0.208", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "about", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
